WHAT IS NEW?

??? ?? 200? [simonsays? serendipity? something?]

  * Bug Fixes

  * New Features

  * New Plotscripting Commands

  * Stuff only Developers Will Notice

October 03 2005 [rusalka]

  * Bug-Fixes

    * Fixed bug 18: "In the map editor, CTRL+F doesn't use default
      passability" [Ralph Versteegen]

    * Fixed bug 76: "Hitting two keys at the same time allows you to
      overflow text-entry fields" [James Paige]

    * Fixed a bug that allowed argument values to pre-fill local
      variables in scripts that did not have enough arguments declared
      (It is now safe to assume that all your local variables will
      start out set to zero) [James Paige]

    * Fixed bug 81: "fight formation() with an invalid formation would
      start a battle which would immediately end" [Yuriy]

    * To bring up the Joystick calibration screen, you should now
      press CTRL+J rather than just J

    * Fixed bug 85: "menu called when exiting a script triggered menu or
      screen with ESC" [Yuriy and Ralph Versteegen]

    * Fixed bug 86: "Foot offset is not taken into account when culling
      npcs and heroes to draw onscreen" [Ralph Versteegen]

    * Fixed bug 88: "A script buffer overflow crashes or freezes game.exe
      instead of displaying an error message" [Ralph Versteegen]

    * "NPC is walking" now returns true when the NPC is walking and false
      if not walking. Used to be backwards. Old compiled scripts that
      depended on the backwards behaviour will still work as they did
      before, but you will have fixed them if you recompile them.
      [James Paige]

  * New Features

    * plotscripting commands to read system time: system hour, system
      minute, system second. [Mike Caron]

    * plotscripting commands to read system date: system day, system
      month, system year. [Yuriy]

    * plotscripting command to find out the currently playing song.
      [Mike Caron]
